created login form component

--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -1,1 +1,17 @@
-<p>login-form works!</p>
+<div class="form-container">
+  <img src="../../assets/profit-and-loss.png" alt="">
+  <h1>{{ title }}</h1>
+  <form>
+    <mat-form-field appearance="outline">
+      <mat-label>Email</mat-label>
+      <input type="email" matInput />
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Password</mat-label>
+      <input type="password" matInput />
+    </mat-form-field>
+    <button mat-flat-button color="primary">
+      LOGIN
+    </button>
+  </form>
+</div>
