--- a/src/app/registration-form/registration-form.component.html
+++ b/src/app/registration-form/registration-form.component.html
@@ -1,4 +1,5 @@
 <div class="form-container">
+  <img src="../../assets/profit-and-loss.png" alt="">
   <h1>{{ title }}</h1>
   <form>
     <mat-form-field appearance="outline">
