--- a/src/styles.css
+++ b/src/styles.css
@@ -1,16 +1,14 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
-* {
-  box-sizing: border-box;
+html, body {
   margin: 0;
   padding: 0;
-}
-
-html, body {
   height: 100%;
+  box-sizing: border-box;
 }
 
 body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  display: grid;
+  align-items: center;
 }
-
